# python-template-2024

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  update-python-environment.sh
src/: main.ipynb  main.py
